# DataPulse-AutoEDA

./: .env  Missing_value.py  README.md  Variable_Analysis.py  app.py  exp.py  explore_data.py  plot.py  railway.toml  requirements.txt
ai_service/: .gitignore  app2.py  chatbot_engine.py  pyproject.toml  requirements.txt  story_engine.py
eda_service/: .gitignore  app.py  pycaret_service.py  pyproject.toml  report_generator.py  requirements.txt
eda_service/templates/: admin.html  eda.html  forgot_password.html  login.html  model.html  new_password.html  prediction_engine.html  report_view.html  upload.html  verify.html
